--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,24 @@
     <groupId>org.example</groupId>
     <artifactId>ssm-crud</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
     <!-- 导入项目依赖包-->
     <dependencies>
+
+        <!--引入分页插件pagehelper-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.11</version>
+        </dependency>
+
         <!--spring    springmvc-->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -17,6 +32,12 @@
             <version>5.0.10.RELEASE</version>
         </dependency>
 
+        <!--导入junit-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.0.10.RELEASE</version>
+        </dependency>
         <!--spring - jdbc -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -47,9 +68,9 @@
 
         <!--数据库连接池和驱动-->
         <dependency>
-            <groupId>c3p0</groupId>
-            <artifactId>c3p0</artifactId>
-            <version>0.9.1.2</version>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.21</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -58,19 +79,30 @@
         </dependency>
 
         <!--servlet-->
+        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+        <!--jstl-->
+        <!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl -->
+        <dependency>
+            <groupId>javax.servlet.jsp.jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+
 
         <!--junit-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13</version>
-            <scope>test</scope>
+            <!--要使用spring整合junit要将scope去掉-->
+            <!--<scope>test</scope>-->
         </dependency>
 
         <!--mybatis generator mybatis逆向工程-->
@@ -79,7 +111,16 @@
             <artifactId>mybatis-generator-core</artifactId>
             <version>1.3.5</version>
         </dependency>
-    </dependencies>
 
+        <!--导入jackson 向页面返回json数据-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.0</version>
+        </dependency>
+
+
+
+    </dependencies>
 
 </project>
